<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yet Another BiseiTokei</string>
    <string name="dir_not_found">Dir %s not found.</string>

    <string name="sayyou">Voice Artists</string>
    <string name="sayyou_summary">Voice Artists settings</string>

    <string name="time_tone_play">Play</string>

    <string name="settings">Settings</string>
    <string name="time_tone">Time Tone</string>
    <string name="time_tone_summary">Time tone settings</string>
    <string name="wakelock_title">WeakLock</string>
    <string name="wakelock_summary">Don\'t shift to the standby</string>

    <string name="ignore_silent_title">Ignore Silent Mode</string>
    <string name="ignore_silent_summary">Enable voice if silent mode.</string>

    <string name="prefs_timetone_serif_every">All</string>
    <string name="prefs_timetone_serif">Speech only (10min)</string>
    <string name="prefs_timetone_every">Time tone(1min)</string>
    <string name="prefs_timetone_none">None</string>


    <string name="rie_tanka">Rie Tanaka</string>
    <string name="chiaki_takahashi">Chiaki Takahashi</string>
    <string name="asami_imai">Asami Imai</string>
    <string name="yuuko_gotou">Yuuko Gotou</string>
    <string name="saori_gotou">Saori Gotou</string>
    <string name="ami_koshimizu">Ami Koshimizu</string>
    <string name="yuko_kaida">Yuko Kaida</string>
    <string name="hiromi_konno">Hiromi Konno</string>
    <string name="marina_inoue">Marina Inoue</string>
    <string name="ayumi_fujimura">Ayumi Fujimura</string>
    <string name="yuu_kobayashi">Yuu Kobayashi</string>
    <string name="kana_asumi">Kana Asumi</string>
</resources>
