<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  		<CheckBoxPreference
			android:key="weaklock"
			android:defaultValue="true"
			android:title="@string/wakelock_title"
			android:summary="@string/wakelock_summary" />

  		<CheckBoxPreference
			android:key="ignore_silent"
			android:defaultValue="false"
			android:title="@string/ignore_silent_title"
			android:summary="@string/ignore_silent_summary" />
  		<ListPreference
			android:key="time_tone"
			android:defaultValue="serif_every"
			android:title="@string/time_tone"
			android:summary="@string/time_tone_summary"
			android:dialogTitle="@string/time_tone"
			android:entries="@array/prefs_timetones"
			android:entryValues="@array/prefs_timetones_values" />

    <PreferenceCategory 
               android:title="@string/sayyou"
               android:summary="@string/sayyou_summary"
    >
    
          <!-- ID 直接書いていて大いにかっこわるいです... -->
          <CheckBoxPreference android:key="sayyou_0" android:defaultValue="true" android:title="@string/rie_tanka" />
          <CheckBoxPreference android:key="sayyou_1" android:defaultValue="true" android:title="@string/chiaki_takahashi" />
          <CheckBoxPreference android:key="sayyou_2" android:defaultValue="true" android:title="@string/asami_imai" />
          <CheckBoxPreference android:key="sayyou_3" android:defaultValue="true" android:title="@string/yuuko_gotou" />
          <CheckBoxPreference android:key="sayyou_4" android:defaultValue="true" android:title="@string/saori_gotou" />
          <CheckBoxPreference android:key="sayyou_5" android:defaultValue="true" android:title="@string/ami_koshimizu" />
          <CheckBoxPreference android:key="sayyou_6" android:defaultValue="true" android:title="@string/yuko_kaida" />
          <CheckBoxPreference android:key="sayyou_7" android:defaultValue="true" android:title="@string/hiromi_konno" />
          <CheckBoxPreference android:key="sayyou_8" android:defaultValue="true" android:title="@string/marina_inoue" />
          <CheckBoxPreference android:key="sayyou_9" android:defaultValue="true" android:title="@string/ayumi_fujimura" />
          <CheckBoxPreference android:key="sayyou_10" android:defaultValue="true" android:title="@string/yuu_kobayashi" />
          <CheckBoxPreference android:key="sayyou_11" android:defaultValue="true" android:title="@string/kana_asumi" />
      </PreferenceCategory>
</PreferenceScreen>
